@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam style strictuml
hide empty members


package models
{
    class Plateau
    {
        +createPartie()
    }


    class Partie
    {
        -nbManches: Integer
        -nbPionsDispo: Integer
        -nbPionsCombinaison: Integer
        -nbPionsTentative: Integer

        +startPartie()
        +createManche(nbPioDisp: Integer, nbPioCombi: Integer,
         nbPioTenta: Integer): Manche
    }


    class Manche
    {
        +<<create>>Manche(tailleCombinaison : Integer, nombreTentatives : Integer)
        +genererCombinaisonAleatoire()
        +getCombinaisonAleatoire()
        +verifierCombinaisonJoueurInt(tentative : Tentative)
        +verifierCombinaisonIndices(tentative : Tentative)
        +couleurDansCombinaison(combinaisonSecrete : CouleurPion[*], couleur : CouleurPion) : Boolean
    }

    class Tentative
    {
        - pionsBienPlaces : Integer
        +<<create>>Tentative(tailleCombinaison : Integer)
        +validerCombinaison()
        +augmentePionsBienPlace()
        +setIndicesCouleurs()
    }


    interface PartieObserver <<interface>>
    {
        +updateIndice(indice: Indice)
        +...()
    }


    interface Indice <<interface>>
    {
        +getIndice()
    }


    class IndiceEasy implements Indice
    {
    }

    class IndiceClassic implements Indice
    {
    }


    class IndiceNum implements Indice
    {
    }


    enum CouleurPion <<enumeration>>
    {
        +ROUGE
        +JAUNE
        +VERT
        +BLEU
        +VIOLET
        +ORANGE
        +NOIR
        +BLANC
        +RIEN
    }


    class Joueur
    {
    }
}



package views
{
    class ViewStart
    {
    }


    class ViewGame
    {
    }


    class ViewEnd
    {
    }
}


package controller
{
    class GameController
    {
    }
}


ViewGame ..|> PartieObserver
ViewEnd ..|> PartieObserver

Plateau "1" *--> "1 -partie" Partie
Partie "1" *--> "*\n -manche" Manche

Partie "*" o--> "*\n-listeObservers" PartieObserver: observe <
Manche "*" o--> "*\n-listeObservers" PartieObserver: observe <
Manche "*" *--> "*\n-listeTentative[*]" Tentative
Manche " 1 " o-> "1\n -strategy" Indice : selectionne >
Manche *--->"1 \n-combinaisonSecrète[*]" CouleurPion : Possède >


Tentative *--->"1 \n-combinaisonJoueur[*]" CouleurPion : Possède >
Tentative *--->"1 \n-indices[*]" CouleurPion : Possède >

@enduml
